Add basic tree diff route
